syntax = "proto3";
package MetaProtocol.metacore.metacore;

option go_package = "github.com/Meta-Protocol/metacore/x/metacore/types";

import "gogoproto/gogo.proto";

message Receive {
  string creator = 1;
  string index = 2;
  string sendHash = 3; 
  string outTxHash = 4; 
  uint64 outBlockHeight = 5;
  uint64 finalizedMetaHeight = 6;
  repeated string signers = 7;
}
